@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-27T02:05:32Z",
-  "count" : 8,
+  "timestamp" : "2022-10-10T02:08:26Z",
+  "count" : 7,
   "count_minmax" : [ 6, 8 ],
-  "count_decinc" : [ -0, +8 ],
+  "count_decinc" : [ -1, +8 ],
   "uniques" : 6,
   "uniques_minmax" : [ 5, 6 ],
   "uniques_decinc" : [ -0, +6 ]
