@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-10-09T16:29:39Z",
+  "timestamp" : "2022-10-10T02:08:26Z",
   "count_outdated" : 2478,
   "uniques_outdated" : 629,
-  "count" : 2506,
+  "count" : 2505,
   "uniques" : 646,
   "clones" : [
     {
       "timestamp": "2022-09-26T00:00:00Z",
-      "count": 8,
+      "count": 7,
       "count_minmax": [ 6, 8 ],
       "uniques": 6,
       "uniques_minmax": [ 5, 6 ]
