@@ -1,3 +1,11 @@
+2022-10-10T02:08:26Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3216435790
+* notice: last 14d: unq all: 10 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 629 2478 / 646 2506
+* notice: next accum: outdated-unq outdated-all / unq all: 629 2478 / 646 2505
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +6 +8 -0 -1 / 6 7
+* notice: removed / changed dates: [] / [2022-09-26]
+
 2022-10-09T16:29:39Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3214801824
 * notice: last 14d: unq all: 10 28
